All changes from Forge to Fabric
We do not document class name changes or the Forge config API changes. This file should be mainly about logic changes
or file rewrites.

# Rewrites
- Replaced gradle/wrapper/gradle-wrapper.jar and its properties to the Fabric wrapper
- Replaced the gradlew and gradlew.bat with the ones from the Fabric template mod
- Rewrote the entirety of build.gradle
- Rewrote the entirety of gradle.properties
- Rewrote the entirety of settings.gradle

# Additions
- Added fabric.mod.json
- Added HypertubeMod.id(String) for convenience
- Added PlayerEntityRendererMixin to emulate the forge PlayerRenderEvent.Pre and Post
- Added HypertubeModClient to handle Fabric client stuff

# Refactors
- Moved icon file into the mod's specific assets for better compatibility

# Little Logic Changes
- The build file's name is now "hypertubes-fabric-(version)-build.(build num).jar"
- All deferred registry stuffs will have significant changes to the way they are accessed/registered, due to Fabric
using a different registry system
- All chat color things (withStyle) have been replaced with .styled(style -> style.(whatever)), since Fabric does not
inherently have such method

# TODO
This is stuff that is still needed to do.

- Implement Cardinal Components API (CCA) to replace all the getPersistentData stuff